@@ -4,5 +4,6 @@ Version: 1.2
 · Export to .CSV (The CSV files will be saved where the JSON are stored)
 · Added % to the CSV
 · Looking forward to add Positions (only initial) aswell
+· Files are saved in C:\Users\%username%\Documents\IOS_CSV_PARSEDFILES
 
 · Fixed small path problem
